benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix022_tso.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix022_tso.yml/mix022_tso.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix022_tso.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_q0zwfgpu/tmp/tmpsdacvbo6.c
Compilation started
/tmp/BenchExec_run_q0zwfgpu/tmp/tmpsdacvbo6.c: In function ‘P1’:
/tmp/BenchExec_run_q0zwfgpu/tmp/tmpsdacvbo6.c:592:19: error: ‘FALSE’ undeclared (first use in this function)
  592 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_q0zwfgpu/tmp/tmpsdacvbo6.c:592:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_q0zwfgpu/tmp/tmpsdacvbo6.c:593:19: error: ‘TRUE’ undeclared (first use in this function)
  593 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_q0zwfgpu/tmp/tmpsdacvbo6.c: In function ‘main’:
/tmp/BenchExec_run_q0zwfgpu/tmp/tmpsdacvbo6.c:661:19: error: ‘FALSE’ undeclared (first use in this function)
  661 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
